minor changes in api behaviour of feedback and documentation for swagger for feedback apis
